# uvTemplate

./: README.md  pyproject.toml
app/: main.py  requirements.txt
app/src/: endpoint1FileName.py
